# libqmi

./: .gitignore  configure.ac
data/: qmi-service-voice.json
src/: Makefile.am
src/libqmi-glib/: qmi-device.c
src/qmi-firmware-update/: qfu-main.c  qfu-updater.c  qfu-utils.c
src/qmi-radio-monitor/: Makefile.am  qrm-app.c  qrm-app.h  qrm-color-icon.c  qrm-color-icon.h  qrm-device.c  qrm-device.h  qrm-error.h  qrm-graph.c  qrm-graph.h  qrm-main.c  qrm-power-tab.c  qrm-power-tab.h  qrm-power-tab.ui  qrm-signal-tab.c  qrm-signal-tab.h  qrm-signal-tab.ui  qrm-window.c  qrm-window.h  qrm-window.ui  qrm.gresource.xml
src/qmi-radio-monitor/data/: Makefile.am  org.freedesktop.QmiRadioMonitor.pkexec.policy.in  qmi-radio-monitor.desktop
src/qmicli/: qmicli-dms.c  qmicli-voice.c  qmicli.c
